--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.42.0",
+    "allure-commandline": "^2.36.0",
     "allure-playwright": "^2.15.0"
   }
 }
